# rust-poem-postgres-sample

./: .gitignore  Cargo.toml  Dockerfile  README.md
docker/: docker-compose-local.yaml
migrations/2023-04-28-203830_create_user/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: constants.rs  database.rs  mod.rs
src/controller/: user_controller.rs
src/model/: health.rs  user.rs
src/repository/: user_repository.rs
src/service/: user_service.rs
tests/: integration_test.rs
