[package]
name = "rust-poem-postgres-api-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# API framewrok dependencies
poem = "1.3.55"

# JSON management dependencies
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

# DB and ORM dependencies
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "chrono"] }
chrono = {version = "0.4.24", features = ["serde", "rustc-serialize"]}
dotenv = "0.15.0"

# Logging dependencies
log = "0.4.17"
log4rs = "1.2.0"

# thread managment
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
